...
        ) {

            item{
                Spacer(modifier = Modifier.height(48.dp))

                Text(
                    "Choose a date, time & area",
                    fontSize = 20.sp,
                )
            }

            items(dateLocationOptions){option ->
                Card(
...
