...
                )

                // Input for participant name
                OutlinedTextField(
                    value = if (isHost) event.hostName else participantState.participantName,
                    onValueChange = onNameChange,
                    label = { Text("Enter your name") },
                    singleLine = true,
                    modifier = Modifier.fillMaxWidth()
                )
            }

            item {
...
